Fixed a bug with sticky bar on mobile devices

--- a/src/scss/_sidebar.scss
+++ b/src/scss/_sidebar.scss
@@ -9,6 +9,7 @@
 		nav{
 			position: fixed;
 			top: 0;
+			left: 0;
 			width: 100%;
 			background-color: #fff;
 			text-align: center;
@@ -61,6 +62,7 @@
 		font-weight: bold;
 		color: rgba(0,0,0,0.5);
 		margin-top: 3em;
+		transform: translate3d(0px,0px,0px);
 		a{
 			display: inline-block;
 			margin: 0 4px;
